tests/security/taintedFunctionWithNoTypes/output.txt
ERROR: TaintedData - input.hack:5:6 - Detected tainted HTML tags